--- a/tabibee.css
+++ b/tabibee.css
@@ -105,22 +105,7 @@ body{
     margin-left: 15%;
     width: 70%;
     margin-top: 17%;
-    animation: rgbanimation;
-    animation-timing-function: ease-in-out;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
 }
-
-/* @keyframes rgbanimation{
-    from{
-        box-shadow: 3px 0px 15px red;
-    }
-
-    to{
-        box-shadow: rgb(0, 174, 255);
-    }
-} */
 
 #section0 .fa-message{
     color: white;
@@ -349,7 +334,7 @@ body{
 
 #section2{
     width: 100%;
-    height: 200vh;
+    height: 250vh;
     background-color:  #111;
 }
 
@@ -417,6 +402,26 @@ body{
     transform: translateX(0);
 }
 
+#section2 .img9{
+    box-shadow: 3px 0px 15px red;
+    width: 40%;
+    margin-top: 91%;
+    margin-left: 30%;  
+    position: absolute;
+    transform: translateX(50%);
+    opacity: 0;
+    filter: blur(5px);
+    transition: all 1.5s;
+}
+
+#section2 .shirt4{
+    transform: translateX(0);
+    filter: blur(0);
+    opacity: 100;
+}
+
+
+
 /*    section 3    */
 
 #section3{
@@ -448,6 +453,12 @@ body{
     align-content: center;
     align-items: center;
     text-align: center;
+}
+
+#section3 .art{
+    width: 10%;
+    margin-top: -3.5%;
+    margin-left: 30%;
 }
 
 #section3 p{
@@ -532,6 +543,20 @@ body{
     transition: 0.5s;
     padding-left: 3%;
     padding-right: 3%;
+}
+
+#section3 .qualification{
+    box-shadow: 3px 0px 15px red;
+    background-color: black;
+    margin-top: 100%;
+    height: 30vh;
+    border-radius: 5%;
+}
+
+#section3 .info{
+    text-align: center;
+    text-decoration: none;
+    color: white;
 }
 
 /*   footer    */
