--- a/tabibee.css
+++ b/tabibee.css
@@ -151,6 +151,7 @@ body{
     border: solid red 1px;
     width: 50%;
     margin-left: 27%;
+    position: absolute;
 }
 
 #section0 .container .started{
@@ -643,6 +644,29 @@ footer .yt{
         width: 100%;
         height: 180vh;
     }
+
+    /*     section 1     */
+    #section1{
+        width: 100%;
+        height: 150vh;
+    }
+
+    #section1 .img3{
+        margin-left: 50%;
+    }
+
+    #section1 .img4{
+        margin-left: 70%;
+    }
+
+    #section1 .img55{
+        margin-left: 28%;
+    }
+
+    #section1 .img56{
+        margin-left: 70%;
+    }
+
 
     /*    section 2     */
     #section2 {
@@ -1327,6 +1351,7 @@ footer .yt{
         width: 100%;
         height: 100vh;
     }
+    
 
     #section0 .container{
         margin-top: 60%;
@@ -1335,15 +1360,15 @@ footer .yt{
     }
 
     #section0 .inputs{
-        margin-top: -30%;
-        margin-left: 47%;
-        font-size: 15px;
+        margin-top: -45%;
+        margin-left: 55%;
+        font-size: 10px;
     }
 
     #section0 .inputss{
-        margin-top: -30%;
-        margin-left: 47%;
-        font-size: 15px;
+        margin-top: -45%;
+        margin-left: 55%;
+        font-size: 10px;
     }
 
     #section0 .fa-message{
@@ -1353,19 +1378,19 @@ footer .yt{
     #section0 .tt{
         margin-left: 78%;
         margin-top: -6.5%;
-        font-size: 15px;
+        font-size: 10px;
     }
 
     #section0 .design{
         margin-left: 63%;
         margin-top: -6.5%;
-        font-size: 15px;
+        font-size: 10px;
     }
 
     #section0 .contact{
         margin-left: 43%;
         margin-top: -6.5%;
-        font-size: 15px;
+        font-size: 10px;
     }
 
     #section0 .container h1{
@@ -1388,7 +1413,7 @@ footer .yt{
 
     #section0 .container img{
         width: 100px;
-        margin-left: 70%;
+        margin-left: 65%;
     }
 
     /*   section 1     */
@@ -1588,32 +1613,33 @@ footer .yt{
     }    
 
     footer table{
-        margin-left: 26.5%;
+        margin-left: 7.5%;
     }
 
     footer .copyright{
-        margin-top: 23%;
-        margin-left: 28%;
+        margin-top: 50%;
+        margin-left: 25%;
+        font-size: 8px;
     }
 
     footer .you{
-        margin-left: 35%;
-        margin-top: 12%;
+        margin-left: 20%;
+        margin-top: 24%;
     }
 
     footer .tt{
-        margin-left: 35%;
-        margin-top: 15%;
+        margin-left: 25%;
+        margin-top: 30%;
     }
 
     footer .yt{
         margin-left: 45%;
-        margin-top: 15%;
+        margin-top: 30%;
     }
 
     footer .fb{
-        margin-left: 58%;
-        margin-top: 15%;
+        margin-left: 68%;
+        margin-top: 30%;
     }
 
 }
