--- a/tabibee.css
+++ b/tabibee.css
@@ -453,6 +453,12 @@ body{
     opacity: 0;
 }
 
+#section2 .seemore{
+    text-align: center;
+    margin-top: 117%;
+    color: darkviol
+}
+
 
 /*    section 3    */
 
